# wiwi

./: CHANGELOG.md  CNAME  Cargo.toml  README.md  build.rs  codecov.yml  crates.js  help.html  index.html  rust-toolchain.toml  search-index.js  settings.html  src-files.js
.cargo/rustdoc-custom-theme/: meadow.css
.github/workflows/: clippy.yml  feature-check.yml  publish-docs.yml  publish.yml  push-ci.yml  test.yml  verify-gen-features.yml
benches/: hex-and-z85.rs
bindings/: Cargo.toml
bindings/pony/: README.md  lib.pony
bindings/src/: lib.rs
decl-macro/: Cargo.toml  README.md
decl-macro/src/: lib.rs  lsl.rs  macro_recurse.rs  void.rs  with_cloned.rs
macro/: Cargo.toml  README.md
macro/.cargo/rustdoc-custom-theme/: meadow.css
macro/src/: builder.rs  int.rs  lib.rs  memory_usage.rs
macro/src/.not-migrated/: int.rs  serialiser_binary.rs
proc-macro/: Cargo.toml
proc-macro/src/: builder.rs  lib.rs  with_cloned.rs
scripts/: Cargo.toml  gen-features
search.desc/wiwi/: wiwi-desc-0-.js  wiwi-desc-1-.js  wiwi-desc-10-.js  wiwi-desc-11-.js  wiwi-desc-2-.js  wiwi-desc-3-.js  wiwi-desc-4-.js  wiwi-desc-5-.js  wiwi-desc-6-.js  wiwi-desc-7-.js  wiwi-desc-8-.js  wiwi-desc-9-.js
search.desc/wiwiwiwiwi/: wiwiwiwiwi-desc-0-.js
search.desc/wiwiwiwiwiwiwiwiwiwi/: wiwiwiwiwiwiwiwiwiwi-desc-0-.js
src/: alloc.rs  aoc.rs  base32.rs  base64.rs  bitstream.rs  builder.rs  chain.rs  cli.rs  clock_timer.rs  clock_timer_2.rs  collections.rs  debounce.rs  encoding.rs  encoding_utils.rs  filetypes.rs  function.rs  h.rs  hex.rs  id.rs  lazy_wrap.rs  lib.rs  lsl.rs  macro_util.rs  mem_use.rs  memory_usage.rs  nom.rs  nominal.rs  num.rs  parser.rs  path.rs  prelude.rs  prelude_3rd_party.rs  prelude_crates.rs  prelude_std.rs  prelude_std_min.rs  prelude_wiwi.rs  ptr.rs  rc.rs  rust_alloc.rs  rust_core.rs  (+9 more)
src/.not-migrated-3/: cli.rs  num.rs  prelude.rs  util_unsafe.rs
src/_internal/: encoding_utils.rs  mod.rs
src/aoc/: mod.rs
src/augment_panic_hook/: mod.rs
src/auth/: README.md  error.rs  kdf.rs  mod.rs  password.rs  salt.rs  user_id.rs  util.rs
src/base32/: mod.rs
src/base64/: mod.rs
src/bigint/: mod.rs
src/bitstream/: encode.rs  mod.rs
src/chain/: array.rs  generic.rs  hashbrown_hashmap.rs  vec.rs
src/chainer/: array.rs  array_mut.rs  array_ref.rs  binary_heap.rs  bitstream.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  into_chainer.rs  mod.rs  must-use-msg.txt  slice_box.rs  slice_boxed.rs  slice_mut.rs  slice_ref.rs  str_ref.rs  string.rs  string_mut.rs  string_ref.rs  traits.rs  vec.rs  vec_deque.rs  with_vars.rs
src/chainer_2/: array.rs  array_mut.rs  array_ref.rs  binary_heap.rs  hash_map.rs  hash_set.rs  into_chainer.rs  linked_list.rs  mod.rs  slice_box.rs  slice_mut.rs  slice_ref.rs  str_box.rs  str_mut.rs  vec.rs  vec_deque.rs  vec_mut.rs  vec_ref.rs
src/chaining/: array.rs  boxed_slice.rs  mod.rs  slice.rs  slice_boxed.rs  slice_mut.rs  slice_ref.rs  vec.rs
src/cli/: mod.rs
src/clock_timer/: mod.rs
src/convert/: mod.rs
src/debounce/: README.md  mod.rs
src/defer/: mod.rs
src/encoding/: base16.rs  base32.rs  generic_fn.rs  hex.rs  rfc1751.rs  z85.rs
src/export_all_submodules/: README.md  mod.rs
src/function/: mod.rs
src/h/: mod.rs
src/hex/: decode.rs  encode.rs  mod.rs
src/id/: id128.rs  id64.rs  mod.rs
src/int/: add.rs  ints.rs  mod.rs  mul.rs  sub.rs
src/iter/: adapter.rs  double_ended.rs  empty.rs  enumerate.rs  enumerate1.rs  from_fn.rs  into_iter.rs  map.rs  mod.rs  peek.rs  repeat_per_item.rs  rev.rs  size_hint.rs  size_hint_old.rs  std_impl.rs  traits.rs  tuple.rs
src/iterator/: adapter.rs  double_ended.rs  empty.rs  enumerate1.rs  from_fn.rs  map.rs  peek.rs  repeat_per_item.rs  rev.rs
src/lazy_wrap/: mod.rs
src/lsl/: ctx.rs  ident.rs  mod.rs  render.rs  script.rs  state.rs  ty.rs  util.rs  val.rs  var.rs
src/macro_util/: macro_recurse.rs  void.rs  with_cloned.rs
src/memory/: mod.rs
src/memory_usage/: mod.rs
src/minesweeper/: mod.rs
src/nom/: mod.rs
src/nominal/: README.md  mod.rs
src/num/: add_checked.rs  add_regular.rs  and_regular.rs  array_conversions.rs  base.rs  count_bits.rs  div_checked.rs  div_int.rs  div_regular.rs  from_lossless.rs  into_lossy.rs  mul_checked.rs  mul_regular.rs  mul_widening.rs  neg_checked.rs  neg_regular.rs  not_regular.rs  or_regular.rs  pow_regular.rs  rem_checked.rs  rem_regular.rs  shl_checked.rs  shl_regular.rs  shr_checked.rs  shr_regular.rs  sub_checked.rs  sub_overflowing.rs  sub_regular.rs  widening.rs  xor_regular.rs
src/num_traits/: add_carrying.rs  add_checked.rs  add_overflowing.rs  add_regular.rs  add_saturating.rs  add_strict.rs  add_unchecked.rs  add_wrapping.rs  and_regular.rs  array_conversions.rs  base.rs  count_bits.rs  div_float.rs  div_int.rs  div_overflowing.rs  div_regular.rs  float_base.rs  from_lossless.rs  from_lossy.rs  into_lossless.rs  mod.rs  mul_checked.rs  (+26 more)
wiwi/: all.html  index.html  macro.defer.html  macro.defer_success!.html  macro.defer_success.html  macro.defer_unwind!.html  macro.defer_unwind.html  macro.export_all_submodules.html  macro.int_range!.html  macro.int_range.html  macro.macro_recurse!.html  macro.macro_recurse.html  macro.nom.html  macro.nom_mod.html  macro.nominal!.html  macro.nominal.html  macro.nominal_mod!.html  macro.nominal_mod.html  macro.panic.html  macro.smallint_negative_as_unsigned_range.html  macro.smallint_negative_range.html  macro.smallint_positive_range.html  macro.smallint_signed_range!.html  macro.smallint_signed_range.html  macro.smallint_unsigned_range!.html  macro.smallint_unsigned_range.html  macro.vec_chain.html  macro.void.html  macro.with_cloned.html  sidebar-items.js
wiwiwiwiwi/: all.html  attr.builder.html  derive.MemoryUsage.html  derive.Serialise.html  index.html  macro.with_cloned.html  sidebar-items.js
wiwiwiwiwiwiwiwiwiwi/: all.html  fn.h.html  index.html  macro.macro_recurse.html  macro.state.html  macro.void.html  macro.with_cloned.html  macro.with_cloned_2.html  macro.with_cloned_3!.html  macro.with_cloned_3.html  macro.with_cloned_4.html  sidebar-items.js
(+21978 files in other folders)
