
[workspace]
members = [
	"macro",
	"scripts"
]

[workspace.package]
version = "0.7.0-testonly.2"
edition = "2021"
authors = ["Meadowsys"]
repository = "https://github.com/meadowsys/wiwi"
license = "MIT"

[package]
name = "wiwi"
description = "A library, of, Stuff™"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = [
	# "data-structures" # ?
	# "internationalization" # ?
	# "localization" # ?
	# "mathematics" # ?
	# "encoding" # ?
	"rust-patterns"
	# "wasm" # ?
	# "web-programming" # ?
]
keywords = [
	"fundamental",
	"general",
	"general-purpose",
	"z85"
]

[dependencies]
wiwiwiwiwi = { path = "macro", version = "=0.7.0-testonly.2" }

argon2 = { version = "0.5.3", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
chrono = { version = "0.4.35", optional = true, features = ["clock"] }
hashbrown = { version = "0.14.3", optional = true, features = ["ahash"] }
httparse = { version = "1.8.0", optional = true }
image = { version = "0.25.1", optional = true }
ordered-float = { version = "4.2.0", optional = true }
p384 = { version = "0.13.0", optional = true }
parking_lot = { version = "0.12.1", optional = true }
rand = { version = "0.8.5", optional = true }
serde_json = { version = "1.0.116", optional = true }
spin_sleep = { version = "1.2.0", optional = true }
thiserror = { version = "1.0.58", optional = true }
tokio = { version = "1.36.0", optional = true, features = ["full"] }
url = { version = "2.5.0", optional = true }
uuid = { version = "1.8.0", optional = true }
zeroize = { version = "1.7.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
hex = "0.4.3"
rand = "0.8.5"
z85 = "3.0.5"

[features]
# Adding new unstable feature:
# - append `-unstable` to its name
# - document it in README (note it is unstable by putting parens after name)
# - make sure to add to `all-unstable` feature
# - check doc cfg_attrs at top of lib.rs
# - make sure to add it to "No features enabled!" thing
# - also check the top of the prelude module
# - make sure the `pub mod` declaration in lib.rs has the right feature attr on it
# - `pub mod` declaration should also have the docsrs cfg attr on it
# In total: the module addition should have 1 change in README, 2 changes in
# Cargo.toml, 3 changes in lib.rs, 1 change in prelude.rs, and of course
# the module file itself
# TODO: write something similar for below graduating feats out of unstable
#
# Graduating feature out of unstable:
# - remove `-unstable` from feature name below
# - update its entry in README
# - move it from `all-unstable` to `all`
# - rename it in cfg_attrs at top of lib.rs
# - rename it in "No features enabled!" thing
# - also check the top of the prelude module
# - update its name in the feature gate / doc attr of its `pub mod` declaration in lib.rs
# - check/add/update its prelude entries
#
# No longer necessary (but good to do anyways I guess):
# - check workflow files
# - check below docs.rs config
# - NOTE: this _is_ good for the docs deploy workflow
#
# It would be good to occasionally check the dependencies too, update them,
# remove ones that aren't part of any feature anymore, etc

all = [
	"clock-timer",
	"debounce",
	"h",
	"hex",
	"lazy-wrap",
	"to-maybeuninit",
	"z85"
]
all-unstable = [
	"all",

	"auth-unstable",
	"bigint-unstable",
	"bitstream-unstable",
	"chainer-unstable",
	"id-unstable",
	"iter-unstable",
	"lsl-unstable",
	"memory-usage-unstable",
	"path-unstable",
	"serialiser-unstable",
	"string-pool-unstable",
	"sudoku-unstable"
]

auth-unstable = [
	"dep:argon2",
	"dep:chacha20poly1305",
	"dep:chrono",
	"dep:p384",
	"dep:rand",
	"dep:thiserror",
	"dep:zeroize",
	"z85"
]
bigint-unstable = []
# base16 = [
# 	"dep:thiserror",
# 	"hex"
# ]
# base32 = [
# 	"dep:thiserror"
# ]
# base64 = [
# 	"dep:thiserror"
# ]
bitstream-unstable = []
chainer-unstable = [
	"iter-unstable",
	"to-maybeuninit"
]
clock-timer = [
	"dep:chrono",
	"dep:tokio"
]
debounce = [
	"dep:chrono",
	"dep:tokio"
]
h = [
	"dep:thiserror"
]
hex = [
	"dep:thiserror"
]
id-unstable = [
	"dep:rand"
]
iter-unstable = []
lazy-wrap = [
	"dep:parking_lot"
]
lsl-unstable = [
	"dep:hashbrown",
	"dep:spin_sleep",
	"dep:uuid",
	"hex",
	"id-unstable"
]
memory-usage-unstable = [
	"wiwiwiwiwi/memory-usage-unstable"
]
path-unstable = []
serialiser-unstable = [
	"dep:ordered-float"
]
string-pool-unstable = [
	"dep:hashbrown",
	"lazy-wrap"
]
sudoku-unstable = [
	"chainer-unstable",
	"iter-unstable"
]
to-maybeuninit = []
# ws = [
# 	"dep:httparse",
# 	"dep:thiserror",
# 	"dep:url"
# ]
z85 = [
	"dep:thiserror"
]

# addon features
hashbrown = ["dep:hashbrown"]
image = ["dep:image"]
serde-json = ["dep:serde_json"]

# config options for certain features
# compiler errors if the feature its for isn't enabled
debounce-dyn-fn = []

[[bench]]
name = "hex-and-z85"
required-features = [
	# "base32",
	# "base64",
	"hex",
	"z85",
]
harness = false

[profile.bench]
lto = "thin"

[package.metadata.docs.rs]
# https://docs.rs/about/metadata

# https://users.rust-lang.org/t/how-to-document-optional-features-in-api-docs/64577
rustdoc-args = ["--cfg", "docsrs"]

features = [
	"all",

	# addon features
	"hashbrown",
	"image",
	"serde-json"
]

targets = [
	"aarch64-apple-darwin",
	"x86_64-apple-darwin",
	"x86_64-unknown-linux-gnu",
	"x86_64-pc-windows-msvc"
]
