[workspace]
members = [
	"macro",
	"scripts"
]

[workspace.package]
version = "0.10.0"
edition = "2021"
authors = ["Meadowsys <meadowsys@kiwin.gay>"]
repository = "https://github.com/meadowsys/wiwi"
license = "MIT"

[package]
name = "wiwi"
description = "A library, of, Stuff™"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
exclude = [
	".cargo",
	".github",
	"codecov.yml",
	"rust-toolchain.toml"
]
categories = [
	# "data-structures" # ?
	# "internationalization" # ?
	# "localization" # ?
	# "mathematics" # ?
	# "encoding" # ?
	"rust-patterns"
	# "wasm" # ?
	# "web-programming" # ?
]
keywords = [
	"fundamental",
	"general",
	"general-purpose",
	"z85"
]

[dependencies]
wiwiwiwiwi = { path = "macro", version = "=0.10.0" }

# argon2 = { version = "0.5.3", optional = true }
# chacha20poly1305 = { version = "0.10.1", optional = true }
# chrono = { version = "0.4.35", optional = true, features = ["clock"] }
# hashbrown = { version = "0.14.3", optional = true, features = ["ahash"] }
# httparse = { version = "1.8.0", optional = true }
# image = { version = "0.25.1", optional = true }
# ordered-float = { version = "4.2.0", optional = true }
# p384 = { version = "0.13.0", optional = true }
# parking_lot = { version = "0.12.1", optional = true }
# rand = { version = "0.8.5", optional = true }
# rand_chacha = { version = "0.3.1", optional = true }
# serde = { version = "1.0.204", optional = true }
# serde_json = { version = "1.0.116", optional = true }
# spin_sleep = { version = "1.2.0", optional = true }
# thiserror = { version = "1.0.58", optional = true }
# tokio = { version = "1.36.0", optional = true, features = ["full"] }
# url = { version = "2.5.0", optional = true }
# uuid = { version = "1.8.0", optional = true }
# zeroize = { version = "1.7.0", optional = true }

[features]
alloc = []
std = []

[build-dependencies]
# cc = "1.1.6"
# dotenvy = "0.15.7"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
hex = "0.4.3"
rand = "0.8.5"
z85 = "3.0.5"

# [[bench]]
# name = "hex-and-z85"
# required-features = [
# 	# "base32",
# 	# "base64",
# 	"hex",
# 	"z85",
# ]
# harness = false

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[package.metadata.docs.rs]
# https://docs.rs/about/metadata

# https://users.rust-lang.org/t/how-to-document-optional-features-in-api-docs/64577
rustdoc-args = ["--cfg", "docsrs"]

features = []

targets = [
	"aarch64-apple-darwin",
	"x86_64-apple-darwin",
	"x86_64-unknown-linux-gnu",
	"x86_64-pc-windows-msvc"
]
