[package]
name = "wiwi"
description = "A library, of, Stuff™"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
exclude = [
	".cargo",
	".github",
	"codecov.yml",
	"rust-toolchain.toml"
]
categories = [
	"rust-patterns"
]
keywords = [
	"fundamental",
	"general",
	"general-purpose",
	"z85"
]

[dependencies]
wiwiwiwiwi = { workspace = true }
wiwiwiwiwiwiwiwiwiwi = { workspace = true }

chrono = { workspace = true }
hashbrown = { workspace = true }
home = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[features]
nightly = []
# unstable = []

[dev-dependencies]
criterion = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
z85 = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
# https://docs.rs/about/metadata

# https://users.rust-lang.org/t/how-to-document-optional-features-in-api-docs/64577
rustdoc-args = ["--cfg", "docsrs"]

features = []

targets = [
	"aarch64-apple-darwin",
	"x86_64-apple-darwin",
	"x86_64-unknown-linux-gnu",
	"x86_64-pc-windows-msvc"
]

[workspace]
members = [
	"decl-macro",
	"proc-macro",
	"scripts"
]

[workspace.package]
version = "0.11.0-pre.2"
edition = "2021"
authors = ["Meadowsys <meadowsys@kiwin.gay>"]
repository = "https://github.com/meadowsys/wiwi"
license = "MIT"

[workspace.dependencies]
wiwiwiwiwi = { path = "proc-macro", version = "=0.11.0-pre.2" }
wiwiwiwiwiwiwiwiwiwi = { path = "decl-macro", version = "=0.11.0-pre.2" }

chrono = { version = "0.4.38", features = ["clock"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
darling = "0.20.10"
hashbrown = { version = "0.15.0", features = ["default-hasher"] }
hex = "0.4.3"
home = "0.5.9"
parking_lot = "0.12.3"
proc-macro2 = "1.0.83"
quote = "1.0.36"
rand = "0.8.5"
syn = "2.0.66"
thiserror = { version = "1.0.69" }
tokio = { version = "1.41.1", features = ["full"] }
z85 = "3.0.5"

[workspace.lints.rust]
# missing_docs = "warn"
unconditional_recursion = "warn"
unexpected_cfgs = "warn"
unfulfilled_lint_expectations = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_conversions = "warn"
empty_docs = "warn"
inline_always = "warn"
items_after_statements = "warn"
items_after_test_module = "warn"
# missing_docs_in_private_items = "warn"
missing_inline_in_public_items = "warn"
missing_safety_doc = "warn"
mixed_attributes_style = "warn"
multiple_unsafe_ops_per_block = "warn"
trait_duplication_in_bounds = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_lazy_evaluations = "allow"
unnecessary_safety_comment = "warn"
