[package]
name = "wiwiwiwiwi"
description = "proc macros for wiwi, a library, of, Stuff™ (implementation detail; do not depend on this crate directly)"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.83"
quote = "1.0.36"
syn = "2.0.66"

[features]
# default = ["syn/full"]

[package.metadata.docs.rs]
# https://docs.rs/about/metadata

# https://users.rust-lang.org/t/how-to-document-optional-features-in-api-docs/64577
rustdoc-args = ["--cfg", "docsrs"]

features = [
	"memory-usage"
]

targets = [
	"aarch64-apple-darwin",
	"x86_64-apple-darwin",
	"x86_64-unknown-linux-gnu",
	"x86_64-pc-windows-msvc"
]
