[package]
name = "wiwiwiwiwi"
description = "proc macros for wiwi, a library, of, Stuff™ (implementation detail; do not depend on this crate directly)"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[features]
# TODO: this should be adjusted
default = ["syn/full", "syn/visit"]

[lints]
workspace = true

[package.metadata.docs.rs]
# https://docs.rs/about/metadata

# https://users.rust-lang.org/t/how-to-document-optional-features-in-api-docs/64577
rustdoc-args = ["--cfg", "docsrs"]

features = []

# we don't need documentation for this crate to be built seperately,
# so tell docs.rs to build the bare minimum
targets = [
	"aarch64-apple-darwin"
]
