[package]
name = "wiwi-scripts"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
wiwi = { path = ".." }

[[bin]]
name = "gen-features"

[[bin]]
name = "generate-hex-table-decoder"
required-features = ["wiwi/hex"]

[[bin]]
name = "generate-z85-table-decoder"
required-features = ["wiwi/z85"]
